objects/AccountTeamMember.object
<CustomObject>
    <fields>
        <fullName>fcio1__Assignment_End_Date__c</fullName>
        <label>Assignment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fcio1__Assignment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Assignment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Assignment_Start_Date__c</fullName>
        <label>Assignment Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>